Attempt to get CustomControllerTest working